--- a/Timeclock/Base.lproj/ClockOptions.storyboard
+++ b/Timeclock/Base.lproj/ClockOptions.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gDy-fM-XMW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gDy-fM-XMW">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -91,9 +91,16 @@
                                 <edgeInsets key="layoutMargins" top="8" left="8" bottom="20" right="8"/>
                             </stackView>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nzN-7f-WgE">
-                                <rect key="frame" x="0.0" y="112.5" width="375" height="368"/>
+                                <rect key="frame" x="0.0" y="150.5" width="375" height="330"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </webView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlw-19-nR5">
+                                <rect key="frame" x="0.0" y="112.5" width="375" height="37"/>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="doneTouchUpInside:" destination="gDy-fM-XMW" eventType="touchUpInside" id="zsU-74-Jhd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -102,16 +109,20 @@
                             <constraint firstItem="z6T-Sb-LAp" firstAttribute="leading" secondItem="6wY-Dy-SXZ" secondAttribute="leading" id="LLq-4M-Nmn"/>
                             <constraint firstItem="3iw-Jn-dvH" firstAttribute="centerY" secondItem="j82-C9-0sV" secondAttribute="centerY" id="Laa-Dd-wsV"/>
                             <constraint firstItem="z6T-Sb-LAp" firstAttribute="height" secondItem="6wY-Dy-SXZ" secondAttribute="height" multiplier="4:17" constant="1" id="Mkh-tT-frr"/>
+                            <constraint firstAttribute="trailing" secondItem="xlw-19-nR5" secondAttribute="trailing" id="PnI-DV-gdu"/>
                             <constraint firstAttribute="trailing" secondItem="z6T-Sb-LAp" secondAttribute="trailing" id="TDx-hJ-B3g"/>
                             <constraint firstAttribute="trailing" secondItem="j82-C9-0sV" secondAttribute="trailing" id="b04-xl-HyU"/>
-                            <constraint firstItem="nzN-7f-WgE" firstAttribute="top" secondItem="j82-C9-0sV" secondAttribute="bottom" constant="1" id="d5A-4z-w7y"/>
                             <constraint firstItem="j82-C9-0sV" firstAttribute="top" secondItem="Gb7-O3-sBl" secondAttribute="bottom" id="fSJ-Tf-Aib"/>
                             <constraint firstAttribute="trailing" secondItem="nzN-7f-WgE" secondAttribute="trailing" id="goz-v4-M7K"/>
                             <constraint firstItem="nzN-7f-WgE" firstAttribute="leading" secondItem="6wY-Dy-SXZ" secondAttribute="leading" id="hLW-D2-Eni"/>
+                            <constraint firstItem="xlw-19-nR5" firstAttribute="leading" secondItem="6wY-Dy-SXZ" secondAttribute="leading" id="lM7-0I-fCC"/>
                             <constraint firstItem="3iw-Jn-dvH" firstAttribute="centerX" secondItem="j82-C9-0sV" secondAttribute="centerX" id="n9E-wJ-rgL"/>
                             <constraint firstItem="j82-C9-0sV" firstAttribute="height" secondItem="6wY-Dy-SXZ" secondAttribute="height" multiplier="3:17" id="oXY-ty-fTM"/>
                             <constraint firstItem="j82-C9-0sV" firstAttribute="leading" secondItem="6wY-Dy-SXZ" secondAttribute="leading" id="pnm-D7-Bv0"/>
+                            <constraint firstItem="nzN-7f-WgE" firstAttribute="top" secondItem="xlw-19-nR5" secondAttribute="bottom" constant="1" id="qwK-u3-EiW"/>
+                            <constraint firstItem="xlw-19-nR5" firstAttribute="top" secondItem="j82-C9-0sV" secondAttribute="bottom" constant="1" id="sBG-q1-wiz"/>
                             <constraint firstItem="3iw-Jn-dvH" firstAttribute="width" secondItem="j82-C9-0sV" secondAttribute="width" id="uHt-fn-ttm"/>
+                            <constraint firstItem="xlw-19-nR5" firstAttribute="height" secondItem="6wY-Dy-SXZ" secondAttribute="height" multiplier="1:17" id="v74-Cn-h2s"/>
                             <constraint firstItem="Zx3-IV-Siy" firstAttribute="top" secondItem="z6T-Sb-LAp" secondAttribute="bottom" id="zab-6W-jWZ"/>
                         </constraints>
                     </view>
@@ -123,6 +134,7 @@
                     <connections>
                         <outlet property="breakEndButton" destination="xTX-zg-ahD" id="rJG-R6-16z"/>
                         <outlet property="breakStartButton" destination="ld2-7p-NrE" id="NnW-1q-03S"/>
+                        <outlet property="doneButton" destination="xlw-19-nR5" id="XMY-9R-dwx"/>
                         <outlet property="greetingLabel" destination="b8R-2U-RFG" id="gUF-IZ-z4b"/>
                         <outlet property="inButton" destination="Hid-hH-yTX" id="eJP-VN-fSN"/>
                         <outlet property="nameLabel" destination="Kv0-pR-kxr" id="Cw8-rt-EDf"/>
