--- a/Timeclock/Setup.storyboard
+++ b/Timeclock/Setup.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sEx-ew-Nqj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sEx-ew-Nqj">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,41 +22,85 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Client ID" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZAR-iQ-2cA">
-                                <rect key="frame" x="26" y="313" width="323" height="40"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="BYG-iU-PqE">
+                                <rect key="frame" x="16" y="40" width="343" height="200"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Client ID" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZAR-iQ-2cA">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="OTe-w6-d4Z"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" keyboardAppearance="light" returnKeyType="next"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="sEx-ew-Nqj" id="4cr-by-t15"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Site ID" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C79-3s-bks" userLabel="SiteID Text Field">
+                                        <rect key="frame" x="0.0" y="45" width="343" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="X84-jb-L70"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" keyboardAppearance="light" returnKeyType="next"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="sEx-ew-Nqj" id="qyB-Cx-G5J"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vBh-wg-4pL" userLabel="Username Text Field">
+                                        <rect key="frame" x="0.0" y="90" width="343" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="0Kq-BT-x6n"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" keyboardAppearance="light" returnKeyType="next"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="sEx-ew-Nqj" id="GSm-db-FA3"/>
+                                        </connections>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hsf-qN-XXv" userLabel="Password Text Field">
+                                        <rect key="frame" x="0.0" y="135" width="343" height="40"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="BIh-ij-jv9"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" keyboardAppearance="light" returnKeyType="done"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="sEx-ew-Nqj" id="qQL-Er-D7W"/>
+                                        </connections>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A15-cO-p1o">
+                                        <rect key="frame" x="0.0" y="180" width="343" height="20"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <state key="normal" title="Setup">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="setupTouchUpInside:" destination="sEx-ew-Nqj" eventType="touchUpInside" id="9BH-cl-UIh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="OTe-w6-d4Z"/>
+                                    <constraint firstAttribute="height" constant="200" id="dfS-b2-H2B"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" keyboardAppearance="light" returnKeyType="done"/>
-                                <connections>
-                                    <outlet property="delegate" destination="sEx-ew-Nqj" id="4cr-by-t15"/>
-                                </connections>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A15-cO-p1o">
-                                <rect key="frame" x="160.5" y="368" width="53" height="36"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                <state key="normal" title="Setup">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="setupTouchUpInside:" destination="sEx-ew-Nqj" eventType="touchUpInside" id="9BH-cl-UIh"/>
-                                </connections>
-                            </button>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="A15-cO-p1o" firstAttribute="centerX" secondItem="ZAR-iQ-2cA" secondAttribute="centerX" id="9Rh-Ul-DPI"/>
-                            <constraint firstItem="ZAR-iQ-2cA" firstAttribute="centerY" secondItem="Rpe-Zo-FOM" secondAttribute="centerY" id="FWQ-Zm-IFV"/>
-                            <constraint firstItem="A15-cO-p1o" firstAttribute="top" secondItem="ZAR-iQ-2cA" secondAttribute="bottom" constant="15" id="Ous-JT-XxT"/>
-                            <constraint firstItem="ZAR-iQ-2cA" firstAttribute="leading" secondItem="Rpe-Zo-FOM" secondAttribute="leadingMargin" constant="10" id="dnL-lF-Vc6"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ZAR-iQ-2cA" secondAttribute="trailing" constant="10" id="oKv-LS-eoq"/>
-                            <constraint firstItem="ZAR-iQ-2cA" firstAttribute="centerX" secondItem="Rpe-Zo-FOM" secondAttribute="centerX" id="qnW-4e-Xml"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BYG-iU-PqE" secondAttribute="trailing" id="49n-8A-aPC"/>
+                            <constraint firstItem="BYG-iU-PqE" firstAttribute="leading" secondItem="Rpe-Zo-FOM" secondAttribute="leadingMargin" id="Epl-gD-rbT"/>
+                            <constraint firstItem="BYG-iU-PqE" firstAttribute="top" secondItem="zqX-ke-vgt" secondAttribute="bottom" constant="20" id="QWM-do-U4g"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="clientIDTextField" destination="ZAR-iQ-2cA" id="ydj-Qh-pmk"/>
+                        <outlet property="passwordTextField" destination="hsf-qN-XXv" id="Aps-f9-AVQ"/>
+                        <outlet property="siteIDTextField" destination="C79-3s-bks" id="Td2-8V-opx"/>
+                        <outlet property="usernameTextField" destination="vBh-wg-4pL" id="r5z-fb-vYg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tfY-Kz-FIj" userLabel="First Responder" sceneMemberID="firstResponder"/>
